--- a/main.html
+++ b/main.html
@@ -7,6 +7,26 @@
 </head>
 
 <body>
+	
+	<table border="1" style="background-color:yellow">
+		<caption>Student Details</caption>
+		<thead>
+			<th>NAME</th></th>
+			<th>AGE</th>
+			<th>BRANCH</th>
+		</thead>
+		<tr>
+			<td>Shaw</td>
+			<td>20</td>
+			<td>CSE</td>
+		</tr>
+		<tr>
+			<td>Adil</td>
+			<td>21</td>
+			<td>ESE</td>
+		</tr>
+	</table>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
