--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<table border="1" style="background-color:yellow">
 		<caption>Student Details</caption>
 		<thead>
-			<th>NAME</th></th>
+			<th>NAME</th>
 			<th>AGE</th>
 			<th>BRANCH</th>
 		</thead>
