--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	
-	<table border="1" style="background-color:yellow">
+	<table>
 		<caption>Student Details</caption>
 		<thead>
 			<th>NAME</th>
